# poly2graph_dev

./: .gitignore  LICENSE  README.md  __init__.py  dataset_generation.py  experimental.py  gnn_models.py  gnn_utils.py  poly2graph_demo.ipynb  pyproject.toml  requirements.txt  setup.py  spectra_topology_2024Aug23.ipynb  spectra_topology_utils.py
gnl_transformer/: GnLTransformer.py
poly2graph/: __init__.py  parallel_roots.py  real_space.py  spectra_topology_utils.py  spectral_graph.py
poly2graph/dataset/: __init__.py  in_memory_dataset.py  post.py  sampling_1band.py
poly2graph/gnl_transformer/: GnLTransformer.py  __init__.py  explain_gnl.py
poly2graph/poly2graph/: __init__.py  line_graph.py  skeleton2graph.py  spectral_graph.py
poly2graph/poly2graph/dataset/: __init__.py  in_memory_dataset.py  post.py  sampling_1band.py
poly_to_graph/: __init__.py
src/poly2graph/: SpectralGraph.py  __init__.py  hamiltonian.py  line_graph.py  parallel_roots.py  skeleton2graph.py  spectral_graph.py  util.py  vis.py
src/poly2graph/dataset/: __init__.py  in_memory_dataset.py  sampling_1band.py
