[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poly2graph"
version = "0.1.0"
description = "Automated Non-Hermitian Spectral Graph Extraction"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Xianquan (Sarinstein) Yan", email = "xianquanyan@gmail.com"}
]
homepage = "https://github.com/sarinstein-yan/spectral-topology"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Environment :: GPU :: NVIDIA CUDA"
]
dependencies = [
    "numpy",
    "numba",
    "networkx",
    "scikit-image",
    "torchmetrics",
    "gdown"
]

[project.optional-dependencies]
dev = ["torch", "torch_geometric", "tensorflow"]  # Optional packages to install manually