[build-system]
requires = ["setuptools>=62", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poly2graph"
version = "0.0.1"
description = "Automated Non-Hermitian Spectral Graph Construction"
readme = "README.md"
authors = [
    {name = "Xianquan (Sarinstein) Yan", email = "xianquanyan@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Environment :: GPU :: NVIDIA CUDA"
]
dependencies = [
    "numpy",
    "numba",
    "networkx",
    "scikit-image",
    "torchmetrics",
    "gdown"
]

[project.optional-dependencies]
dev = ["torch", "torch_geometric", "tensorflow"]  # Optional packages to install manually

[project.urls]
Homepage = "https://github.com/sarinstein-yan/poly2graph"